--- a/docs/CSS/unavail.css
+++ b/docs/CSS/unavail.css
@@ -1,3 +1,5 @@
 .body{
-    background-image: url('img/bgerror.jpg');
+    background-image: url('../img/bgerror.jpg');
+    background-repeat: no-repeat;
+    background-size:cover;
 }
