--- a/docs/CSS/main.css
+++ b/docs/CSS/main.css
@@ -7,11 +7,13 @@
     top: 0px;
     z-index: 1;
     border-radius: 0px 0px 10px 10px;
+    font-family: Roboto;
     
 }
 ul{
   list-style-type: none;
   float: right;
+  
 }
 li{
     float: left;
